                                                         -*- coding: utf-8 -*-

Changes with Apache Traffic Server 3.1.0
  *) Make sure --enable-purify works again

  *) [TS-888] Fix SSL by enabling the right direction on successful setup.

  *) [TS-925] Switch from integer thread IDs to hex thread IDs with the
   diagnostics output. Author: Brian Geffon.

  *) [TS-919] All of iocore is now IPv6 compatible.

  *) [TS-867] moving to a different thread only if the pluginvc is invoked
   from a non regular thread.

  *) [TS-876] forward map based on request receive port. Author: Manjesh
   Nilange.

  *) [TS-880] Major performance problem with second request on same
   keep-alive connection. This is a partial fix, another 2x improvement
   can be made, but too risky right now. Authors: William Bardwell and
   weijin.

  *) [TS-900] TSHttpTxnNewCacheLookupDo (experimental) breaks requests
   to origin server. Author: William Bardwell.

  *) [TS-918] Allow interval-based rotation for round robin entries.
   Author: M. Nunberg.

  *) [TS-916] TSHttpIsInternalRequest() crashes if client connection is
   terminated prematurely. Author: Manjesh Nilange.

  *) [TS-466] Multiline headers handled improperly.

  *) [TS-914] fix iocore_net_main_poll debug info in UnixNet.cc
   Author: taorui

  *) [TS-911] Remove unecessary lock in HTTP accept.

  *) [TS-908] HostDB now stores IPv6 addresses.

  *) [TS-813] fix http_ui /stat/ to response with content type

  *) [TS-849] fix some variables for traffic_line -s setting

  *) [TS-874] make asf-dist work with git repo

  *) [TS-906] ATS doesn't use proxy.config.http.forward.proxy_auth_to_parent.

  *) [TS-592] DNS internals are now IPv6 compatible. Externally this means
     DNS servers with IPv6 addresses can be used although only IPv4 responses
     are useful until other IPv6 upgrades are done.

  *) [TS-907] The source address for DNS requests can be set.

  *) [TS-903] Internal resolver library now IPv6 compatible.