@@ -1,4 +1,7 @@
                                                          -*- coding: utf-8 -*-
+Changes with Apache Traffic Server 3.1.1
+  *) [TS-896] When logging config changes, we should check if it is remote
+   logging and clean up the collation client related data.
 
 Changes with Apache Traffic Server 3.1.0
   *) Make sure --enable-purify works again
